--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,7 +12,10 @@
     user = pelletier
 
 [difftool]
-    prompt = false
+	prompt = false
+
+[diff]
+	tool = vimdiff
 
 [color]
     ui = true
@@ -26,3 +29,4 @@ trustExitCode = true
 
 [alias]
 l = log -16 --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
+	d = difftool
