--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,3 +32,5 @@ trustExitCode = true
     lg = log -16 --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset' --graph
     d = difftool
     m = merge --no-ff
+[push]
+	default = current
