--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule ".emacs.d/minor-modes/rhtml"]
 	path = .emacs.d/minor-modes/rhtml
 	url = git://github.com/eschulte/rhtml.git
+[submodule "vim/.vim/bundle/vim-coffee-script"]
+	path = vim/.vim/bundle/vitality
+    url = https://github.com/kchmck/vim-coffee-script.git
