--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,9 +28,14 @@ cmd = "mvim -f $BASE $LOCAL $REMOTE $MERGED -c 'SpliceInit'"
 trustExitCode = true
 
 [alias]
+    a = add
+    c = commit -a
+    d = difftool
     l = log -16 --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
     lg = log -16 --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset' --graph
-    d = difftool
     m = merge --no-ff
+    p = pull
+    s = status
+
 [push]
 	default = current
