--- a/.gitmodules
+++ b/.gitmodules
@@ -53,7 +53,7 @@
 	path = .emacs.d/minor-modes/rhtml
 	url = git://github.com/eschulte/rhtml.git
 [submodule "vim/.vim/bundle/vim-coffee-script"]
-	path = vim/.vim/bundle/vitality
+	path = vim/.vim/bundle/vim-coffe-script
     url = https://github.com/kchmck/vim-coffee-script.git
 [submodule "vim/.vim/bundle/handlebars"]
 	path = vim/.vim/bundle/handlebars
