--- a/i3/config
+++ b/i3/config
@@ -9,6 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# Use left alt as $mod because I'm in a VM in OS X
 set $mod Mod1
 
 # font for window titles. ISO 10646 = Unicode
@@ -136,5 +137,5 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command ~/.i3/status.sh
 }
