--- a/i3/config
+++ b/i3/config
@@ -9,8 +9,8 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-# Use left alt as $mod because I'm in a VM in OS X
-set $mod Mod1
+# alt = Mod1 win = Mod4
+set $mod Mod4
 
 # font for window titles. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
