Add lots of emacs modes
I forgot to add them for a while

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -41,3 +41,9 @@ trustExitCode = true
 
 [push]
 	default = current
+
+[credential]
+helper = /opt/boxen/bin/boxen-git-credential
+
+[hub]
+protocol = https
